tests/baselines/reference/parserMemberAccessorDeclaration3.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration3.ts (1 errors) ====
    class C {
      get 0() { }
          ~
!!! parserMemberAccessorDeclaration3.ts(2,7): error TS2126: Getters must return a value.
    }